# financial_analysis

./: .gitignore  CMakeLists.txt  Project.cbp  README.md  faf.uml  journal.txt  main.cpp  open_project  threading.cbp
fafui/: fafui.pro  mainwindow.ui
history_analysis/: airbus.json  airbus.plot  airbus.plotscript  history_analysis.project
include/: alert.h  currency.h  data_source.h  data_source_manager.h  framework.h  market.h  market_id.h  parser.h
indicators/: CMakeLists.txt  cmake_install.cmake  indicators  indicators.cbp  indicators.layout  main.cpp
indicators/include/: signal.h
indicators/src/: Signal.cpp  cmake_install.cmake
src/: alert.cpp  data_source.cpp  data_source_manager.cpp  framework.cpp  market.cpp  market_id.cpp  parser.cpp
